--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
     "build:tsc": "tsc",
     "build:vite": "vite build",
     "build": "run-s build:*",
-    "prepublish": "run-s build",
-    "precommit": "run-p lint test"
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -61,6 +61,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-typescript": "^0.14.0",
+    "husky": "^8.0.2",
     "jest": "^29.3.1",
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
