--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "demo"
   ],
   "scripts": {
-    "prepare": "husky install",
+    "prepare:peers": "install-peers",
+    "prepare:husky": "husky install",
+    "prepare": "run-p prepare:*",
     "dev": "vite",
     "start": "run-s dev",
     "preview": "vite preview",
@@ -45,15 +48,21 @@
     "fix": "run-s fix:*",
     "build:tsc": "tsc",
     "build:vite": "vite build",
-    "build": "run-s build:*",
+    "build:vite:demo": "run-s 'build:vite -- -c vite.config.demo.ts'",
+    "build": "run-s build:tsc build:vite",
+    "build:demo": "run-s build:tsc build:vite:demo",
     "commit": "cz",
-    "release": "standard-version"
+    "ci": "run-s commit",
+    "release": "standard-version",
+    "predeploy": "run-s build:demo",
+    "deploy": "gh-pages -d demo"
   },
   "devDependencies": {
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.44.0",
+    "@vitejs/plugin-react": "^2.2.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^8.0.1",
@@ -65,7 +74,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-typescript": "^0.14.0",
+    "gh-pages": "^4.0.0",
     "husky": "^8.0.2",
+    "install-peers-cli": "^2.2.0",
     "jest": "^29.3.1",
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
