--- a/package.json
+++ b/package.json
@@ -37,14 +37,16 @@
     "dev": "vite",
     "start": "run-s dev",
     "preview": "vite preview",
-    "test": "jest",
+    "test": "vitest --watch false",
+    "test:watch": "vitest",
     "test:coverage": "run-s test --coverage",
-    "test:watch": "run-s test --watch",
+    "test:ui": "run-s 'test:watch -- --ui'",
+    "lint:typescript": "run-s build:tsc",
     "lint:prettier": "prettier -l .",
     "lint:eslint": "eslint *.{t,j,cj}s{,x} --no-error-on-unmatched-pattern",
     "lint": "run-p lint:*",
-    "fix:prettier": "run-s lint:prettier -w",
-    "fix:eslint": "run-s lint:eslint --fix",
+    "fix:prettier": "run-s 'lint:prettier -- -w'",
+    "fix:eslint": "run-s 'lint:eslint -- --fix'",
     "fix": "run-s fix:*",
     "build:tsc": "tsc",
     "build:vite": "vite build",
@@ -63,7 +65,8 @@
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.44.0",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/ui": "^0.28.4",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^8.0.1",
@@ -78,7 +81,6 @@
     "gh-pages": "^4.0.0",
     "husky": "^8.0.2",
     "install-peers-cli": "^2.2.0",
-    "jest": "^29.3.1",
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.0",
@@ -86,6 +88,7 @@
     "ts-jest": "^29.0.3",
     "typescript": "*",
     "vite": "^3.2.4",
-    "vite-plugin-dts": "^1.7.1"
+    "vite-plugin-dts": "^1.7.1",
+    "vitest": "^0.28.4"
   }
 }
